Convert example projects to use modules